fix some rooms and added mail support